--- a/package.json
+++ b/package.json
@@ -5,20 +5,45 @@
     "build": "next build",
     "start": "next start",
     "test": "jest --watch",
-    "test:ci": "jest --ci"
+    "test:ci": "jest --ci",
+    "cypress": "cypress open",
+    "cypress:headless": "cypress run",
+    "e2e": "start-server-and-test start http://localhost:3000 cypress",
+    "e2e:headless": "start-server-and-test start http://localhost:3000 cypress:headless",
+    "lint": "next lint"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^13.1.1",
+    "antd": "^5.1.0",
+    "axios": "^1.2.1",
+    "moment": "^2.29.4",
     "next": "latest",
+    "next-plugin-antd-less": "^1.8.0",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-hook-form": "^7.41.0",
+    "react-query": "^3.39.2"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "5.16.4",
+    "@ant-design/icons": "^4.8.0",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "13.2.0",
     "@testing-library/user-event": "14.2.0",
     "@types/react": "18.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "autoprefixer": "^10.4.13",
+    "babel-plugin-import": "^1.13.6",
+    "cypress": "^12.3.0",
+    "eslint": "^8.30.0",
+    "eslint-config-next": "latest",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-testing-library": "^5.9.1",
+    "husky": "^8.0.3",
     "jest": "28.1.0",
     "jest-environment-jsdom": "28.1.0",
+    "postcss": "^8.4.20",
+    "start-server-and-test": "^1.15.2",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.6.4"
   }
 }
