--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "antd": "^5.1.0",
     "axios": "^1.2.1",
     "moment": "^2.29.4",
-    "next": "latest",
+    "next": "12.3",
     "next-plugin-antd-less": "^1.8.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -41,7 +41,9 @@
     "husky": "^8.0.3",
     "jest": "28.1.0",
     "jest-environment-jsdom": "28.1.0",
+    "lint-staged": "^13.1.0",
     "postcss": "^8.4.20",
+    "prettier": "^2.8.2",
     "start-server-and-test": "^1.15.2",
     "tailwindcss": "^3.2.4",
     "typescript": "4.6.4"
